<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="album" type="com.example.album.model.Album"/>
     </data>

        <LinearLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />
<LinearLayout
    android:layout_marginStart="@dimen/item_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/artist_name"
                android:textStyle="bold"
                android:textSize="@dimen/artist_text"
                android:text="@{String.format(@string/artist_name, album.artistName)}"/>

            <TextView
                android:id="@+id/track_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/track_name"
                android:textSize="@dimen/artist_text"
                android:text="@{String.format(@string/track_name, album.trackName)}"/>

            <TextView
                android:id="@+id/collection_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/collection_name"
                android:textSize="@dimen/artist_text"
                android:text="@{String.format(@string/collection_name, album.collectionName)}"/>

            <TextView
                android:id="@+id/collection_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/collection_price"
                android:textSize="@dimen/artist_text"
                android:text="@{String.format(@string/collection_price, album.collectionPrice)}"/>

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/release_date"
                android:textSize="@dimen/artist_text"
                android:text="@{String.format(@string/release_date, album.releaseDate)}"/>
</LinearLayout>
        </LinearLayout>

</layout>
